@@ -1,5 +1,5 @@
-This is Python version 3.3.3 release candidate 2
-================================================
+This is Python version 3.3.3
+============================
 
 Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011,
 2012, 2013 Python Software Foundation.  All rights reserved.
