@@ -2,6 +2,14 @@
 Python News
 +++++++++++
 
+What's New in Python 3.3.3?
+===========================
+
+*Release date: 17-Nov-2013*
+
+No changes from release candidate 2.
+
+
 What's New in Python 3.3.3 release candidate 2?
 ===============================================
 
